fix the message width on mobile

--- a/src/scss/components/DealPageBottom.scss
+++ b/src/scss/components/DealPageBottom.scss
@@ -56,6 +56,7 @@
 
 @media (max-width: $screen-md-min) {
     .DealPageBottom{
+        width: 100vw;
         &.sidebar-open{
             .commentsSection{
                 display: none !important;
